--- a/package.json
+++ b/package.json
@@ -62,7 +62,9 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
-    "@types/node": "^22",
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.16",
+    "@types/node": "^22.15.30",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "postcss": "^8",
